--- a/index.html
+++ b/index.html
@@ -1,43 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Web Shop</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>URL Shortener</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>My Web Shop</h1>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Cart</a></li>
-        <li><a href="#">Checkout</a></li>
-      </ul>
-    </nav>
-  </header>
+    <div class="container">
+        <h1>URL Shortener</h1>
+        <input type="text" id="longUrlInput" placeholder="Enter Long URL...">
+        <button onclick="shortenUrl()">Shorten URL</button>
+        <p id="shortUrlDisplay"></p>
+    </div>
 
-  <main>
-    <section class="product">
-      <img src="product-image.jpg" alt="Product Image">
-      <h2>Product Name</h2>
-      <p>Product description goes here...</p>
-      <p class="price">$19.99</p>
-      <button class="add-to-cart">Add to Cart</button>
-    </section>
-
-    <section class="cart">
-      <h2>Your Cart</h2>
-      <ul id="cart-items"></ul>
-      <p class="total">Total: $0.00</p>
-      <button class="checkout">Proceed to Checkout</button>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 My Web Shop. All rights reserved.</p>
-  </footer>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
